# mcp_visualizer

./: .env.local.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: Event Recording System Diagram.md  MCP Inspector Teaching App - MVP Product Requirements Document.md  MCP Sequence diagram.md  Mockups.md  Module 1 Validation Results.md  Module 10 - Testing and Performance Validation.md  Module 11 - Actor-Based Timeline Implementation.md  Module 2 Validation Results.md  Module 3 Validation Results.md  Module 4 Validation Results.md  Module 5 Validation Results.md  Module 6 Validation Results.md  Module 6B Architecture - SSE and Stateful Connections.md  Module 6B Validation Results.md  Module 7 Validation Results.md  Module 8 Validation Results.md  Module 9 Validation Results.md  POC anlysis.md  Technical Design Document - MVP.md  mcp-inspector-actor-based.html  refined-card-design.md
mcp-inspector-app/: MODULE_2_TEST_RESULTS.md  README.md  jest.config.js  package-lock.json  package.json
mcp-inspector-app/app/: TEST_MODULES_README.md  globals.css  page.tsx
mcp-inspector-app/components/: column-definitions.ts
mcp-inspector-app/data/: mcp-servers.json
mcp-inspector-app/hooks/: use-timeline-sse.ts  use-timeline.ts  useSSEConnection.ts
mcp-inspector-app/lib/: constants.ts  event-builder.ts  layout-engine.ts  mermaid-exporter.ts  mock-data.ts  mock-events.ts  otlp-exporter.ts  phase-detector.ts  row-builder.ts  session.ts
mcp-inspector-app/store/: timeline-store.ts  types.ts
mcp-inspector-app/types/: domain.ts  mcp.ts  (+1 more)
mcp_visualizer/: __init__.py
(+78 files in other folders)
